<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_security"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tilellit.joomlaqualitychecks.security">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <CheckBox
                android:text="@string/security_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:id="@+id/checkBox" />

            <CheckBox
                android:text="@string/security_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox21" />

            <CheckBox
                android:text="@string/security_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox26" />

            <CheckBox
                android:text="@string/security_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox27" />

            <CheckBox
                android:text="@string/security_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox25" />

            <CheckBox
                android:text="@string/security_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox24" />

            <CheckBox
                android:text="@string/security_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox23" />

            <CheckBox
                android:text="@string/security_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox22" />

            <CheckBox
                android:text="@string/security_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox19" />

            <CheckBox
                android:text="@string/security_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox20" />

            <CheckBox
                android:text="CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox18" />

            <CheckBox
                android:text="CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox17" />

            <CheckBox
                android:text="CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox16" />

            <CheckBox
                android:text="CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox12" />

            <CheckBox
                android:text="CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox13" />

            <CheckBox
                android:text="CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox14" />

            <CheckBox
                android:text="CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox15" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
