<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tilellit.joomlaqualitychecks.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <Button
                android:text="@string/installation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/installation" />

            <Button
                android:text="@string/general"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/general"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/button"
                android:layout_marginTop="25dp" />

            <Button
                android:text="@string/security"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/security"
                android:layout_below="@+id/button2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp" />

            <Button
                android:text="@string/security_adv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/adv_security"
                android:layout_below="@+id/button"
                android:layout_alignStart="@+id/button"
                android:layout_marginTop="25dp" />

            <Button
                android:text="@string/seo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button4"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:id="@+id/seo" />

            <Button
                android:text="@string/cache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cache"
                android:layout_below="@+id/button3"
                android:layout_alignStart="@+id/button3"
                android:layout_marginTop="25dp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
